# TLCT

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build  meson.options
.devcontainer/: Dockerfile  devcontainer.json  install-opencv.sh
.github/workflows/: CI.yml
app/: CMakeLists.txt  main.cpp
cmake/: config.cmake.in  dependencies.cmake  helper.cmake  install.cmake  options.cmake  polices.cmake  policies.cmake  tlct-config.cmake.in
src/: CMakeLists.txt  meson.build
src/include/: tlct.hpp
src/include/tlct/: README.md  config.hpp  convert.hpp  helper.hpp  io.hpp  namespace.hpp
src/include/tlct/common/: cmake.h  cmake.h.in  config.h.in  defines.h  error.cpp  error.hpp  info.cpp  info.hpp  meson.build
src/include/tlct/config/: arrange.hpp  calib.hpp  calibration.hpp  common.hpp  concepts.hpp  layout.hpp  mitypes.cpp  mitypes.hpp  raytrix.hpp  tspc.hpp
src/include/tlct/config/arrange/: README.md  corners.cpp  corners.hpp  offset.cpp  offset.hpp
src/include/tlct/config/calibration/: raytrix.hpp  tspc.hpp
src/include/tlct/config/common/: argparser.hpp  cfg_map.hpp  cli.cpp  cli.hpp  common.hpp  concepts.hpp  enums.hpp  generic.hpp  map.cpp  map.hpp  param.hpp
src/include/tlct/config/concepts/: arrange.hpp  calib.hpp  factory.hpp  layout.hpp  specific.hpp
src/include/tlct/config/layout/: corners.hpp  offset.hpp
src/include/tlct/config/raytrix/: calib.hpp  layout.hpp  param.hpp  specific.hpp
src/include/tlct/config/tspc/: calib.hpp  layout.hpp  param.hpp  specific.hpp
src/include/tlct/config/tspc/v1/: calib.hpp  layout.hpp  param.hpp
src/include/tlct/config/tspc/v2/: calib.hpp  layout.hpp  param.hpp
src/include/tlct/convert/: README.md  common.hpp  concepts.hpp  helper.hpp  manager.cpp  manager.hpp  multiview.hpp  patchsize.hpp  raytrix.hpp  state.hpp  tspc.hpp
src/include/tlct/convert/common/: README.md  bridge.hpp  cache.cpp  cache.hpp  direction.hpp  match_points.hpp  matching.hpp  pixel_heap.hpp
src/include/tlct/convert/common/bridge/: patch_merge.cpp  patch_merge.hpp
src/include/tlct/convert/concepts/: bridge.hpp  manager.hpp  multiview.hpp  neighbors.hpp  patchsize.hpp  psize.hpp  state.hpp
src/include/tlct/convert/helper/: cache.hpp  census.cpp  census.hpp  consts.hpp  direction.hpp  functional.cpp  functional.hpp  grad.hpp  inspect.hpp  match.hpp  mibuffer.cpp  mibuffer.hpp  microimages.hpp  neighbors.cpp  neighbors.hpp  record.hpp  roi.cpp  roi.hpp  ssim.hpp  variance.hpp  wrapper.hpp
src/include/tlct/convert/manager/: impl.cpp  impl.hpp  traits.hpp
src/include/tlct/convert/multiview/: README.md  cache.cpp  cache.hpp  impl.cpp  impl.hpp  ltype_merge.hpp  params.cpp  params.hpp  patch_merge.hpp  xf_merge.hpp
src/include/tlct/convert/multiview/ltype_merge/: cache.cpp  cache.hpp  impl.cpp  impl.hpp
src/include/tlct/convert/multiview/patch_merge/: cache.cpp  cache.hpp  impl.cpp  impl.hpp
src/include/tlct/convert/multiview/xf_merge/: cache.cpp  cache.hpp  impl.cpp  impl.hpp
src/include/tlct/convert/patchsize/: README.md  cache.hpp  census.cpp  census.hpp  debug.hpp  direction.hpp  impl.cpp  impl.hpp  mibuffer.cpp  mibuffer.hpp  neighbors.cpp  neighbors.hpp  params.cpp  params.hpp  record.hpp  ssim.hpp  xf.hpp
src/include/tlct/convert/patchsize/census/: functional.cpp  functional.hpp  impl.cpp  impl.hpp  info.cpp  info.hpp  mibuffer.cpp  mibuffer.hpp  params.cpp  params.hpp  ssim.cpp  ssim.hpp
src/include/tlct/convert/patchsize/debug/: impl.cpp  impl.hpp
src/include/tlct/convert/patchsize/debug/census/: impl.cpp  impl.hpp
src/include/tlct/convert/patchsize/helper/: neighbors.cpp  neighbors.hpp
src/include/tlct/convert/patchsize/ssim/: functional.cpp  functional.hpp  impl.cpp  impl.hpp  mibuffer.cpp  mibuffer.hpp  params.cpp  params.hpp  ssim.cpp  ssim.hpp
src/include/tlct/convert/patchsize/xf/: impl.cpp  impl.hpp
src/include/tlct/convert/raytrix/: direction.hpp  multiview.hpp  neighbors.hpp  patchsize.hpp  state.hpp
src/include/tlct/convert/raytrix/multiview/: cache.hpp  impl.hpp  params.hpp
src/include/tlct/convert/raytrix/patchsize/: impl.hpp  neighbors.hpp  params.hpp
src/include/tlct/convert/tspc/: direction.hpp  helper.hpp  multiview.hpp  neighbors.hpp  patchsize.hpp  state.hpp  to_mv.hpp  tomv.hpp  topk.hpp
src/include/tlct/convert/tspc/multiview/: cache.hpp  helper.hpp  impl.hpp  params.hpp
src/include/tlct/convert/tspc/patchsize/: algorithm.hpp  feature.hpp  features.hpp  impl.hpp  neighbors.hpp  params.hpp  pixel_heap.hpp  surround.hpp  topk.hpp  wrapper.hpp
src/include/tlct/helper/: charset.cpp  charset.hpp  constexpr.hpp  error.cpp  error.hpp  math.hpp  misc.hpp  select.hpp  static_math.hpp  std.hpp  transpose.hpp
src/include/tlct/helper/constexpr/: math.hpp  string.hpp
src/include/tlct/io/: concepts.hpp  yuv.hpp  yuvp.hpp
src/include/tlct/io/concepts/: frame.hpp
src/include/tlct/io/yuv/: frame.cpp  frame.hpp  planar.hpp  reader.cpp  reader.hpp  writer.cpp  writer.hpp
src/include/tlct/io/yuv/planar/: extent.cpp  extent.hpp  frame.cpp  frame.hpp  reader.cpp  reader.hpp  writer.cpp  writer.hpp
src/include/tlct/io/yuvp/: frame.hpp  reader.hpp  writer.hpp
src/include/tlct/namespace/: concepts.hpp  raytrix.hpp  tspc.hpp
src/lib/: CMakeLists.txt  lib.cpp  meson.build
subprojects/: argparse.wrap  doctest.wrap
tests/: CMakeLists.txt  meson.build  test_common_cfg.cpp  test_common_config.cpp  test_config.cpp  test_config_map.cpp  test_constexpr_math.cpp  test_corners_arrange.cpp  test_corners_layout.cpp  test_functional.cpp  test_offset_arrange.cpp  test_offset_layout.cpp  test_raytrix_config.cpp  test_ssim.cpp  test_static_math.cpp  test_template.cpp  test_tspc_cfg.cpp  test_tspc_cfg_v1.cpp  test_tspc_cfg_v2.cpp  test_tspc_config.cpp  test_tspc_newconfig.cpp  test_tspc_patchsizes.cpp
