option(
    'TLCT_BUILD_TESTS',
    type : 'feature',
    value : 'disabled',
    description : 'Build tests',
)

option(
    'TLCT_HEADER_ONLY',
    type : 'feature',
    value : 'disabled',
    description : 'Enable the header-only mode',
)

option(
    'TLCT_BUILD_SHARED_LIBS',
    type : 'feature',
    value : 'disabled',
    description : 'Build shared libs',
)

option(
    'TLCT_ENABLE_LTO',
    type : 'feature',
    value : 'disabled',
    description : 'Enable full link-time-optimizations (LTO)',
)
